--- a/config/default.yml
+++ b/config/default.yml
@@ -30,10 +30,17 @@ train:
   log_dir: log
   debug: false
   verbose: 1
-  optimizer: Adam
+  optimizer: RAdam
   optimizer_kwarg:
     lr: 0.001
-    decay: 0
+    beta_1: 0.9
+    beta_2: 0.999
+    epsilon: null
+    decay: 0.0
+  Lookahead: true
+  Lookahead_kwarg:
+    k: 5
+    alpha: 0.5
 prune:
   is_prune: false
   init_sparsity: 0.5
