--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-termcolor==1.1.0
-scipy==1.2.1
-tensorflow_gpu==1.14.0
-tensorflow_model_optimization==0.1.1
-opencv_python==4.0.0.21
-matplotlib==3.0.3
-scikit_image==0.15.0
-numpy==1.16.2
 imgaug==0.2.9
+scipy==1.3.0
+tensorflow_model_optimization==0.1.1
+numpy==1.16.2
+tensorflow_gpu==1.14.0
+tqdm==4.31.1
+scikit_image==0.15.0
+termcolor==1.1.0
+matplotlib==3.0.3
+opencv_python==4.0.0.21
 Pillow==6.1.0
+PyYAML==5.1.2
