--- a/config/default_yoloalgin.yml
+++ b/config/default_yoloalgin.yml
@@ -56,6 +56,15 @@ train:
     mode: auto
     baseline: null
     restore_best_weights: false
+  modelcheckpoint: true
+  modelcheckpoint_kwarg:
+    monitor: val_loss
+    verbose: 0
+    save_best_only: true
+    save_weights_only: false
+    mode: auto
+    save_freq: epoch
+    load_weights_on_restart: false
 prune:
   is_prune: false
   init_sparsity: 0.5
