--- a/config/default_pfld_opted.yml
+++ b/config/default_pfld_opted.yml
@@ -1,40 +1,31 @@
 mode: train
 model:
-  name: yoloalign
-  helper: YOLOAlignHelper
+  name: pfld
+  helper: PFLDHelper
   helper_kwarg:
-    image_ann: data/celeba_img_ann.npy
-    class_num: 1
-    anchors: data/celeba_anchor.npy
-    landmark_num: 5
+    image_ann: data/wflw_img_ann.npy
     in_hw:
-      - 224
-      - 320
-    out_hw:
-      - - 7
-        - 10
+      - 112
+      - 112
+    landmark_num: 98
+    attribute_num: 6
     validation_split: 0.1
-  network: yolov2algin_mobilev1
+  network: pfld_optimized
   network_kwarg:
-    input_shape:
-    - 224
-    - 320
+    input_shape: 
+    - 112
+    - 112
     - 3
-    anchor_num: 3
-    class_num: 20
-    landmark_num: 5
-    alpha: 0.75
-  loss: YOLOAlign_Loss
+    landmark_num: 98
+    alpha: 1.
+    weight_decay: 0.00005
+  loss: PFLD_Loss
   loss_kwarg:
-    obj_thresh: 0.7
-    iou_thresh: 0.5
-    obj_weight: 1
-    noobj_weight: 1
-    wh_weight: 1
-    landmark_weight: 2
+    landmark_weight: 1.
+    eular_weight: 1.
 train:
   augmenter: false
-  batch_size: 16
+  batch_size: 64
   pre_ckpt: null
   rand_seed: 10101
   epochs: 10
@@ -78,7 +69,6 @@ prune:
   end_epoch: 5
   frequency: 100
 inference:
-  infer_fn: yoloalgin_infer
+  infer_fn: pfld_infer
   infer_fn_kwarg:
-    obj_thresh: 0.7
-    iou_thresh: 0.3
+    radius: 1
