--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-imgaug==0.2.9
-scipy==1.3.0
-tensorflow_model_optimization==0.1.1
 numpy==1.16.2
-tensorflow_gpu==1.14.0
-tqdm==4.31.1
-scikit_image==0.15.0
-termcolor==1.1.0
-matplotlib==3.0.3
 opencv_python==4.0.0.21
+scipy==1.3.0
+matplotlib==3.0.3
+dlib==19.17.0
+tensorflow_gpu==1.14.0
+termcolor==1.1.0
+toolz==0.9.0
+imgaug==0.2.9
+tqdm==4.31.1
+tensorflow_model_optimization==0.1.1
+scikit_image==0.15.0
 Pillow==6.1.0
+typing==3.7.4.1
 PyYAML==5.1.2
