--- a/config/default_yoloalgin.yml
+++ b/config/default_yoloalgin.yml
@@ -14,7 +14,7 @@ model:
       - - 7
         - 10
     validation_split: 0.1
-  network: yolov2algin_mobilev1
+  network: yolov2algin_mbv1_k210
   network_kwarg:
     input_shape:
     - 224
