--- a/config/default.yml
+++ b/config/default.yml
@@ -82,3 +82,9 @@ inference:
   infer_fn_kwarg:
     obj_thresh: 0.7
     iou_thresh: 0.3
+evaluate:
+  eval_fn: yolo_eval
+  eval_fn_kwarg:
+    det_obj_thresh: 0.1
+    det_iou_thresh: 0.3
+    mAp_iou_thresh: 0.3
