--- a/config/default_facerec_triplet.yml
+++ b/config/default_facerec_triplet.yml
@@ -1,3 +1,6 @@
+BATCH_SIZE_REF: &BATCH_SIZE_REF 64
+WIDTH_REF: &WIDTH_REF 128
+
 mode: train
 model:
   name: feacrec
@@ -5,24 +8,26 @@ model:
   helper_kwarg:
     image_ann: data/celeba_facerec_img_ann.npy
     in_hw:
-      - 96
-      - 96
+      - *WIDTH_REF
+      - *WIDTH_REF
     embedding_size: 128
-  network: mbv1_facerec
+    use_softmax: false
+  network: mbv1_triplet_facerec
   network_kwarg:
     input_shape:
-      - 96
-      - 96
+      - *WIDTH_REF
+      - *WIDTH_REF
       - 3
     embedding_size: 128
     depth_multiplier: 1.0
   loss: Triplet_Loss
   loss_kwarg:
+    batch_size: *BATCH_SIZE_REF
     alpha: 0.6
 train:
   jit: true
   augmenter: false
-  batch_size: 64
+  batch_size: *BATCH_SIZE_REF
   pre_ckpt: null
   rand_seed: 10101
   epochs: 30
