--- a/config/default_yolov2.yml
+++ b/config/default_yolov2.yml
@@ -5,7 +5,7 @@ model:
   helper_kwarg:
     image_ann: data/voc_img_ann.npy
     class_num: 20
-    anchors: data/voc_anchor.npy
+    anchors: data/voc_anchor_yolov2.npy
     in_hw:
     - 224
     - 320
@@ -35,7 +35,7 @@ train:
   batch_size: 32
   pre_ckpt: null
   rand_seed: 10101
-  epochs: 10
+  epochs: 100
   log_dir: log
   debug: false
   verbose: 1
