add sub log dir control

--- a/config/default_yoloalgin.yml
+++ b/config/default_yoloalgin.yml
@@ -40,6 +40,7 @@ train:
   rand_seed: 10101
   epochs: 10
   log_dir: log
+  sub_log_dir: null
   debug: false
   verbose: 1
   vali_step_factor: 0.5
