--- a/config/default_facerec_triplet_k210.yml
+++ b/config/default_facerec_triplet_k210.yml
@@ -32,6 +32,7 @@ train:
   rand_seed: 10101
   epochs: 30
   log_dir: log
+  sub_log_dir: null
   debug: false
   verbose: 1
   vali_step_factor: 0.3
