--- a/config/default_yolov2.yml
+++ b/config/default_yolov2.yml
@@ -37,6 +37,7 @@ train:
   rand_seed: 10101
   epochs: 100
   log_dir: log
+  sub_log_dir: null
   debug: false
   verbose: 1
   vali_step_factor: 0.5
