--- a/config/default_yolov2.yml
+++ b/config/default_yolov2.yml
@@ -31,7 +31,7 @@ model:
     wh_weight: 1
 train:
   jit: false
-  augmenter: false
+  augmenter: true
   batch_size: 32
   pre_ckpt: null
   rand_seed: 10101
