--- a/config/default.yml
+++ b/config/default.yml
@@ -7,20 +7,20 @@ model:
     class_num: 20
     anchors: data/voc_anchor.npy
     in_hw:
-    - 224
-    - 320
+      - 224
+      - 320
     out_hw:
-    - - 7
-      - 10
-    - - 14
-      - 20
+      - - 7
+        - 10
+      - - 14
+        - 20
     validation_split: 0.3
   network: yolo_mbv2_k210
   network_kwarg:
     input_shape:
-    - 224
-    - 320
-    - 3
+      - 224
+      - 320
+      - 3
     anchor_num: 3
     class_num: 20
     alpha: 0.75
@@ -31,6 +31,7 @@ model:
     obj_weight: 1
     noobj_weight: 1
     wh_weight: 1
+    verbose: 1
 train:
   jit: true
   augmenter: false
