--- a/config/default_yolov2.yml
+++ b/config/default_yolov2.yml
@@ -78,8 +78,12 @@ train:
       kwarg: null
     - name: MultiScaleTrain
       kwarg:
-        interval: 300
+        interval: 10
         scale_range: [-3, 3]
+    - name: StepLR
+      kwarg:
+        steps: [400, 700, 900, 1000, 40000, 60000]
+        rates: [0.0005, 0.001, 0.002, 0.02, 0.002, 0.0002]
 prune:
   is_prune: false
   init_sparsity: 0.5
