--- a/config/default_facerec_asoftmax.yml
+++ b/config/default_facerec_asoftmax.yml
@@ -27,7 +27,16 @@ model:
     scale: 30
     margin: 0.35
 train:
-  jit: true
+  graph_optimizer: true
+  graph_optimizer_kwarg: 
+    layout_optimizer: true
+    remapping: true
+    shape_optimization: true
+    loop_optimization: true
+    constant_folding: true
+    function_optimization: true
+    scoped_allocator_optimization: true
+    layout_optimizer: true
   augmenter: false
   batch_size: *BATCH_SIZE_REF
   pre_ckpt: null
