--- a/config/default_facerec_softmax_k210.yml
+++ b/config/default_facerec_softmax_k210.yml
@@ -24,7 +24,16 @@ model:
   loss_kwarg:
     scale: 30
 train:
-  jit: true
+  graph_optimizer: true
+  graph_optimizer_kwarg: 
+    layout_optimizer: true
+    remapping: true
+    shape_optimization: true
+    loop_optimization: true
+    constant_folding: true
+    function_optimization: true
+    scoped_allocator_optimization: true
+    layout_optimizer: true
   augmenter: false
   batch_size: 64
   pre_ckpt: null
