--- a/config/default_pfld_opted.yml
+++ b/config/default_pfld_opted.yml
@@ -24,7 +24,16 @@ model:
     landmark_weight: 1.
     eular_weight: 1.
 train:
-  jit: true
+  graph_optimizer: true
+  graph_optimizer_kwarg: 
+    layout_optimizer: true
+    remapping: true
+    shape_optimization: true
+    loop_optimization: true
+    constant_folding: true
+    function_optimization: true
+    scoped_allocator_optimization: true
+    layout_optimizer: true
   augmenter: false
   batch_size: 64
   pre_ckpt: null
