--- a/config/default_yoloalgin.yml
+++ b/config/default_yoloalgin.yml
@@ -33,7 +33,16 @@ model:
     wh_weight: 1
     landmark_weight: 2
 train:
-  jit: true
+  graph_optimizer: true
+  graph_optimizer_kwarg: 
+    layout_optimizer: true
+    remapping: true
+    shape_optimization: true
+    loop_optimization: true
+    constant_folding: true
+    function_optimization: true
+    scoped_allocator_optimization: true
+    layout_optimizer: true
   augmenter: false
   batch_size: 16
   pre_ckpt: null
