--- a/config/default.yml
+++ b/config/default.yml
@@ -34,7 +34,7 @@ model:
     cls_weight: 1
     verbose: 1
 train:
-  graph_optimizer: true
+  graph_optimizer: false
   graph_optimizer_kwarg: 
     layout_optimizer: true
     remapping: true
@@ -54,13 +54,12 @@ train:
   debug: false
   verbose: 1
   vali_step_factor: 0.5
-  optimizer: RAdam
+  optimizer: Adam
   optimizer_kwarg:
-    lr: 0.001
+    learning_rate: 0.001
     beta_1: 0.9
     beta_2: 0.999
-    epsilon: null
-    decay: 0.0
+    amsgrad: false
   Lookahead: true
   Lookahead_kwarg:
     k: 5
