--- a/config/default.yml
+++ b/config/default.yml
@@ -26,7 +26,7 @@ model:
     alpha: 0.75
   loss: YOLO_Loss
   loss_kwarg:
-    iou_thresh: 0.5
+    iou_thresh: 0.75
     obj_weight: 1
     noobj_weight: 1
     wh_weight: 3
@@ -45,12 +45,12 @@ train:
     scoped_allocator_optimization: true
     layout_optimizer: true
   augmenter: true
-  batch_size: 16
-  pre_ckpt: null
+  batch_size: 24
+  pre_ckpt: log/default_exp/train_model_116.h5
   rand_seed: 10101
-  epochs: 500
+  epochs: 30
   log_dir: log
-  sub_log_dir: yolo_k210_exp
+  sub_log_dir: default_exp
   debug: false
   verbose: 1
   vali_step_factor: 0.5
@@ -85,14 +85,14 @@ train:
         load_weights_on_restart: false
     - name: TerminateOnNaN
       kwarg: null
-    - name: MultiScaleTrain
-      kwarg:
-        interval: 20
-        scale_range: [-1, 2]
+    # - name: MultiScaleTrain
+    #   kwarg:
+    #     interval: 50
+    #     scale_range: [-3, 5]
     - name: StepLR
       kwarg:
-        steps: [100, 200, 300]
-        rates: [0.0001, 0.0002, 0.0001]
+        steps: [10     , 20   ,  30   ,   50  ,  60  , 80    ,   90  ,  100   ]
+        rates: [0.001, 0.0005,  0.0003, 0.0003,0.0002, 0.0005, 0.0002,  0.0002]
 prune:
   is_prune: false
   init_sparsity: 0.5
@@ -132,3 +132,4 @@ evaluate:
       - train
       - tvmonitor
     save_result: true
+    save_result_dir: /home/zqh/Documents/mAP/input
