--- a/config/default.yml
+++ b/config/default.yml
@@ -85,10 +85,10 @@ train:
         load_weights_on_restart: false
     - name: TerminateOnNaN
       kwarg: null
-    # - name: MultiScaleTrain
-    #   kwarg:
-    #     interval: 50
-    #     scale_range: [-3, 5]
+    - name: MultiScaleTrain
+      kwarg:
+        interval: 50
+        scale_range: [-3, 5]
     - name: StepLR
       kwarg:
         steps: [ 50  ,  80    ,  120   ]
