retinaface training success

--- a/config/default.yml
+++ b/config/default.yml
@@ -24,7 +24,7 @@ model:
     anchor_num: 3
     class_num: 20
     alpha: 0.75
-  loss: YOLO_Loss
+  loss: YOLOLoss
   loss_kwarg:
     iou_thresh: 0.75
     obj_weight: 1
