--- a/config/default_yolov3.yml
+++ b/config/default_yolov3.yml
@@ -25,7 +25,7 @@ model:
       - 3
     anchor_num: 3
     class_num: 20
-  loss: YOLO_Loss
+  loss: YOLOLoss
   loss_kwarg:
     iou_thresh: 0.5
     obj_weight: 1
