fix retinaface resize

--- a/config/default_retinaface.yml
+++ b/config/default_retinaface.yml
@@ -49,10 +49,10 @@ train:
     scoped_allocator_optimization: true
     layout_optimizer: true
   augmenter: true
-  batch_size: 16
+  batch_size: 32
   pre_ckpt: null
   rand_seed: 10101
-  epochs: 150
+  epochs: 250
   log_dir: log
   sub_log_dir: default_retinaface_exp
   debug: false
@@ -95,8 +95,8 @@ train:
     #     scale_range: [-3, 5]
     - name: StepLR
       kwarg:
-        steps: [ 20  ,  100 ]
-        rates: [0.0001,0.001]
+        steps: [   10  , 190 , 220  ,  250  ]
+        rates: [0.00001,0.001,0.0001,0.00001]
 prune:
   is_prune: false
   init_sparsity: 0.5
