--- a/config/default_yolov3.yml
+++ b/config/default_yolov3.yml
@@ -28,6 +28,7 @@ model:
   loss: YOLO_Loss
   loss_kwarg:
     iou_thresh: 0.5
+    obj_thresh: 0.7
     obj_weight: 1
     noobj_weight: 1
     wh_weight: 3
