--- a/config/default_tinyimgnet.yml
+++ b/config/default_tinyimgnet.yml
@@ -51,24 +51,31 @@ train:
   Lookahead_kwarg:
     k: 5
     alpha: 0.5
-  earlystop: false
-  earlystop_kwarg:
-    monitor: val_loss
-    min_delta: 0
-    patience: 4
-    verbose: 0
-    mode: auto
-    baseline: null
-    restore_best_weights: false
-  modelcheckpoint: true
-  modelcheckpoint_kwarg:
-    monitor: val_loss
-    verbose: 0
-    save_best_only: true
-    save_weights_only: false
-    mode: auto
-    save_freq: epoch
-    load_weights_on_restart: false
+  callbacks:
+    # - name: EarlyStopping
+    #   kwarg:
+    #     monitor: val_loss
+    #     min_delta: 0
+    #     patience: 4
+    #     verbose: 0
+    #     mode: auto
+    #     baseline: null
+    #     restore_best_weights: false
+    - name: ModelCheckpoint
+      kwarg:
+        monitor: val_loss
+        verbose: 0
+        save_best_only: true
+        save_weights_only: false
+        mode: auto
+        save_freq: epoch
+        load_weights_on_restart: false
+    - name: TerminateOnNaN
+      kwarg: null
+    - name: StepLR
+      kwarg:
+        steps: [ 50  ,  80    ,  120   ]
+        rates: [0.0001, 0.0004,  0.0001]
 prune:
   is_prune: false
   init_sparsity: 0.5
