retinaface use new anchor

--- a/config/default_retinaface.yml
+++ b/config/default_retinaface.yml
@@ -8,12 +8,12 @@ model:
       - 640
       - 640
     anchor_widths: 
-      - - 16
-        - 32
-      - - 64
-        - 128
-      - - 256
-        - 512
+      - - [16,16]
+        - [32,32]
+      - - [64,64]
+        - [128,128]
+      - - [256,256]
+        - [512,512]
     anchor_steps:
       - 8
       - 16
@@ -28,7 +28,13 @@ model:
       - null
       - null
       - 3
-    anchor_num: 2
+    anchor:
+      - - [16,16]
+        - [32,32]
+      - - [64,64]
+        - [128,128]
+      - - [256,256]
+        - [512,512]
     filters: 64
     alpha: 0.25
   loss: RetinaFaceLoss
