--- a/config/default_retinaface_slim_k210.yml
+++ b/config/default_retinaface_slim_k210.yml
@@ -8,16 +8,16 @@ model:
       - 240
       - 320
     anchor_widths: 
-      - - 10
-        - 16
-        - 24
-      - - 32
-        - 48
-      - - 64
-        - 96
-      - - 128
-        - 192
-        - 256
+      - - [10,10]
+        - [16,16]
+        - [24,24]
+      - - [32,32]
+        - [48,48]
+      - - [64,64]
+        - [96,96]
+      - - [128,128]
+        - [192,192]
+        - [256,256]
     anchor_steps:
       - 8
       - 16
@@ -34,6 +34,17 @@ model:
       - null
       - 3
     num_classes: 2
+    anchor:
+      - - [10,10]
+        - [16,16]
+        - [24,24]
+      - - [32,32]
+        - [48,48]
+      - - [64,64]
+        - [96,96]
+      - - [128,128]
+        - [192,192]
+        - [256,256]
   loss: RetinaFaceLoss
   loss_kwarg:
     loc_weight: 1
