--- a/config/default_retinaface_k210.yml
+++ b/config/default_retinaface_k210.yml
@@ -8,12 +8,12 @@ model:
       - 240
       - 320
     anchor_widths: 
-      - - 24
-        - 48
-      - - 96
-        - 128
-      - - 192
-        - 256
+      - - [13 , 17]
+        - [28 , 38]
+      - - [74 , 98]
+        - [119, 161]
+      - - [171, 217]
+        - [234, 299]
     anchor_steps:
       - 8
       - 16
@@ -28,7 +28,13 @@ model:
       - null
       - null
       - 3
-    anchor_num: 2
+    anchor:
+      - - [13 , 17]
+        - [28 , 38]
+      - - [74 , 98]
+        - [119, 161]
+      - - [171, 217]
+        - [234, 299]
   loss: RetinaFaceLoss
   loss_kwarg:
     loc_weight: 1
